# personal-website

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  cloudflared-config-example.yml  dev.sh  docker-compose.yml  pyproject.toml
app/: config.py  main.py  security.py
app/routers/: pages.py
static/css/: style.css
templates/: about.html  base.html  contact.html  index.html  projects.html
